change vote factor, fix anchor on user topic list, fix on mobile style

--- a/assets/less/mobile.less
+++ b/assets/less/mobile.less
@@ -58,7 +58,7 @@
 #footer {
     border-top: 1px solid #dadada;
     background: #fff;
-    padding: 10px;
+    padding: 10px 0;
 }
 #footer .expand-footer {
     display: none;
@@ -66,6 +66,7 @@
 #footer p {
     line-height: 1;
     font-size: 12px;
+    padding: 0 10px;
     margin: 0 0 8px 0;
 }
 #main {
